Swapping padding for margin on logo for small screens to avoid link overlap

--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -43,7 +43,7 @@ body {
 		
 		@media #{$respond-tiny} {
 			height: 2em;
-			padding: 1em 0;
+			margin: 1em 0;
 		}
 
 		@media #{$respond-small} {
